Version 5.3.0 (TBD)
    Added `uploadUri` and `blobInfo` to `editorUpload.uploadImages` return type #TINY-4579
    Changed the `link`, `image` and `paste` plugins to use Promises to reduce the bundle size #TINY-4710
    Changed the default icons to be lazy loaded during initialization #TINY-4729
    Changed so base64 encoded urls are converted to blob urls when content is parsed #TINY-4727
    Fixed the `quickimage` button not restricting the file types to images #TINY-4715
    Fixed resize handlers displaying in the wrong location sometimes for remote images #TINY-4732
    Fixed table picker breaking in Firefox on low zoom levels #TINY-4728
    Fixed issue with loading or pasting contents with large base64 encoded images on Safari #TINY-4715
    Fixed supplementary special characters being truncated when inserted into the editor. Patch contributed by mlitwin. #TINY-4791
    Fixed toolbar buttons not set to disabled when the editor is in readonly mode #TINY-4592
    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog #TINY-4786
    Fixed the placeholder not hiding when pasting content into the editor #TINY-4828
Version 5.2.2 (TBD)
    Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
Version 5.2.1 (2020-03-25)
    Fixed the "is decorative" checkbox in the image dialog clearing after certain dialog events #FOAM-11
    Fixed possible uncaught exception when a `style` attribute is removed using a content filter on `setContent` #TINY-4742
    Fixed the table selection not functioning correctly in Microsoft Edge 44 or higher #TINY-3862
    Fixed the table resize handles not functioning correctly in Microsoft Edge 44 or higher #TINY-4160
    Fixed the floating toolbar drawer disconnecting from the toolbar when adding content in inline mode #TINY-4725 #TINY-4765
    Fixed `readonly` mode not returning the appropriate boolean value #TINY-3948